<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:fitsSystemWindows="true">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/constarint_ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/login_button"
        android:layout_marginBottom="5dp"
        android:fitsSystemWindows="true">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="200dp"
            android:layout_height="69dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.20"
            app:srcCompat="@drawable/splash_logo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/aeh_bold"
            android:text="@string/welcome"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <!--        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
    -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_TL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="30dp"
            android:textColorHint="@color/grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/email_signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/email"
                android:textSize="@dimen/txt_size_cd"
                android:inputType="textEmailAddress"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/pass_TL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textColorHint="@color/grey"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_TL">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/pass_signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="@dimen/txt_size_cd"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/forgotpass_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/aeh_small_bold"
            android:text="@string/forgot"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pass_TL" />


        <TextView
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/aeh_bold"
            android:text="sdAD"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView4"
            app:layout_constraintHorizontal_bias="0.50"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:fontFamily="@font/aeh_regular"
            android:text="@string/noaccount"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.50"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgotpass_signin"
            app:layout_constraintVertical_bias="0.65" />
    </android.support.constraint.ConstraintLayout>


    <Button
        android:id="@+id/login_button"
        style="@style/button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45_btndp"
        android:layout_alignParentBottom="true"
        android:text="@string/login" />

</RelativeLayout>