<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/header_RL"
        android:layout_width="match_parent"
        android:background="@drawable/ic_cover"
        android:layout_height="@dimen/_180sdp">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/DL"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_70sdp"
            android:layout_gravity="center"
            android:layout_marginTop="14dp"
            android:src="@mipmap/ic_camera"
            android:layout_centerInParent="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/_30sdp"
            app:civ_border="true"
            app:civ_border_color="@android:color/transparent"
            app:civ_border_width="0px"
            app:civ_shadow="false"/>

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/IC"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_70sdp"
            android:layout_gravity="center"
            android:layout_marginTop="14dp"
            android:src="@mipmap/ic_camera"
            android:layout_centerInParent="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="@dimen/_30sdp"
            app:civ_border="true"
            app:civ_border_color="@android:color/transparent"
            app:civ_border_width="0px"
            app:civ_shadow="false" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/change_driving_licence"
            android:textColor="@android:color/white"
            android:layout_toLeftOf="@+id/fakeView"
            android:gravity="center"
            android:layout_below="@+id/DL"
            android:fontFamily="@font/aeh_light"
            android:textSize="@dimen/txt_size_bc"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/messageTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_toRightOf="@+id/fakeView"
            android:layout_below="@+id/IC"
            android:gravity="center"
            android:text="@string/change_indentification_card"
            android:textColor="@android:color/white"
            android:fontFamily="@font/aeh_light"
            android:textSize="@dimen/txt_size_bc"/>

        <View
            android:id="@+id/fakeView"
            android:layout_width="1dp"
            android:layout_centerInParent="true"
            android:layout_height="match_parent"/>

    </RelativeLayout>
    <RelativeLayout
        android:layout_below="@+id/header_RL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="50dp"
        android:paddingBottom="15dp">



        <android.support.design.widget.TextInputLayout
            android:id="@+id/licence_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/experince"
            android:gravity="center"
            android:textColorHint="@color/colorPrimary"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/licence_num_edt"
                style="@style/NormalPink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/licenceNumber"
                android:inputType="text"
                android:textAllCaps="false"
                android:maxLength="12"
                android:textColor="@android:color/black"
                android:textSize="@dimen/txt_size_c" />
        </android.support.design.widget.TextInputLayout>



        <TextView
            android:id="@+id/specialNote_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/specialNote"
            android:layout_below="@+id/licence_num"
            android:layout_marginTop="@dimen/_20sp"
            android:textColor="@android:color/black"
            android:fontFamily="@font/aeh_heavy"
            android:textSize="@dimen/txt_size_c" />

        <TextView
            android:id="@+id/specialNote_Thanks_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_below="@+id/specialNote_TV"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/specialNote_Thanks"
            android:textColor="@android:color/black"
            android:fontFamily="@font/aeh_regular"
            android:textSize="@dimen/txt_size_c" />
    </RelativeLayout>

    <TextView
        android:id="@+id/submit_TV"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:text="@string/submit"
        android:gravity="center"
        android:textAllCaps="true"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:textSize="@dimen/txt_size_d"
        android:fontFamily="@font/aeh_bold"/>

</RelativeLayout>